# aoc-rs

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs  utils.rs
src/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_23.rs  day_25.rs  mod.rs
src/year_2024/: day22.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  mod.rs
