[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# dependencies for framework 
clap = { version = "4.5.44", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
dotenv = "0.15.0"

# Dependencies for solution implementations
fancy-regex = "0.16.1"
itertools = "0.14.0"
md5 = "0.8.0"
regex = "1.11.2"
